--- a/css/style.less
+++ b/css/style.less
@@ -138,6 +138,7 @@ body {
 	}
 	@media @size-sm {
 		.main-navigation-list {
+			display: none;
 			position: absolute;
 			right: 0;
 			width: 100%;
@@ -147,6 +148,7 @@ body {
 			box-sizing: border-box;
 			transition: opacity 0.3s cubic-bezier(.09,.83,.51,.98);
 			&.block {
+				display: block;
 				height: auto;
 				opacity: 1;
 				text-align: center;
