--- a/css/style.css
+++ b/css/style.css
@@ -129,50 +129,28 @@ body {
   background-image: url(../img/bg-main-header.png);
   background-repeat: no-repeat;
   background-size: cover;
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 .main-header-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width: 100%;
   padding-top: 50px;
   padding-bottom: 20px;
-  -webkit-box-align: end;
-  -ms-flex-align: end;
   align-items: flex-end;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 .main-header .h-content {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   height: 100%;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   text-align: center;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 .main-header .h-content .h_cap_wrap {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width: calc(50% - 30px);
-  -webkit-box-flex: 3;
-  -ms-flex-positive: 3;
   flex-grow: 3;
-  -webkit-box-align: end;
-  -ms-flex-align: end;
   align-items: flex-end;
 }
 .main-header .h-content .h_cap_wrap .h-caption {
@@ -185,15 +163,9 @@ body {
   text-transform: uppercase;
 }
 .main-header .h-content .h_desc_wrap {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width: calc(50% - 30px);
-  -webkit-box-flex: 4;
-  -ms-flex-positive: 4;
   flex-grow: 4;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
 }
 .main-header .h-content .h_desc_wrap .h-description {
@@ -217,7 +189,6 @@ body {
   display: block;
   text-align: center;
   line-height: 0;
-  -webkit-transition: opacity 0.5s cubic-bezier(0.09, 0.83, 0.51, 0.98);
   transition: opacity 0.5s cubic-bezier(0.09, 0.83, 0.51, 0.98);
 }
 .logo:hover {
@@ -243,8 +214,6 @@ body {
 }
 .main-navigation-list {
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 .main-navigation-list .nav-item {
@@ -257,7 +226,6 @@ body {
   font-size: 16px;
   color: #fff;
   text-transform: uppercase;
-  -webkit-transition: color 0.3s cubic-bezier(0.09, 0.83, 0.51, 0.98);
   transition: color 0.3s cubic-bezier(0.09, 0.83, 0.51, 0.98);
 }
 .main-navigation-list .nav-item a:hover {
@@ -265,23 +233,18 @@ body {
 }
 @media (max-width: 750px) {
   .main-navigation .main-navigation-list {
+    display: none;
     position: absolute;
     right: 0;
     width: 100%;
     opacity: 0;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
     flex-direction: column;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
-    -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    -webkit-transition: opacity 0.3s cubic-bezier(0.09, 0.83, 0.51, 0.98);
     transition: opacity 0.3s cubic-bezier(0.09, 0.83, 0.51, 0.98);
   }
   .main-navigation .main-navigation-list.block {
+    display: block;
     height: auto;
     opacity: 1;
     text-align: center;
@@ -290,7 +253,6 @@ body {
     width: 100%;
     padding: 0;
     border-bottom: 2px solid #fff;
-    -webkit-box-sizing: border-box;
     box-sizing: border-box;
   }
   .main-navigation .main-navigation-list .nav-item:last-child {
@@ -300,7 +262,6 @@ body {
     display: block;
     padding: 20px 0;
     background-color: #888888;
-    -webkit-transition: background-color 0.3s cubic-bezier(0.09, 0.83, 0.51, 0.98);
     transition: background-color 0.3s cubic-bezier(0.09, 0.83, 0.51, 0.98);
   }
   .main-navigation .main-navigation-list .nav-item a:hover {
@@ -350,28 +311,16 @@ body {
   background-color: #78d6fa;
 }
 .services-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  -ms-flex-pack: distribute;
   justify-content: space-around;
 }
 .services-item {
   width: 300px;
-  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   padding: 20px 0;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
 }
 .services-item > img {
@@ -398,7 +347,6 @@ body {
   background-position: 200% 30%;
   background-size: contain;
   overflow: hidden;
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 .expertise .expertise-right-img {
@@ -412,15 +360,10 @@ body {
   background-size: cover;
 }
 .expertise-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   margin-left: -15px;
   margin-right: -15px;
-  -webkit-box-pack: start;
-  -ms-flex-pack: start;
   justify-content: flex-start;
   z-index: 10;
 }
@@ -431,7 +374,6 @@ body {
   }
 }
 .expertise .content {
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   word-wrap: break-word;
   margin-left: 15px;
@@ -472,10 +414,7 @@ body {
   color: #888888;
 }
 .expertise-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   margin-bottom: 20px;
 }
@@ -485,7 +424,6 @@ body {
   padding-left: 30px;
   padding-right: 25px;
   margin-bottom: 30px;
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   text-align: left;
 }
@@ -547,7 +485,6 @@ body {
   border: 1px solid #ceeefa;
   border-radius: 40px;
   text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.7);
-  -webkit-transition: 0.2s ease-in-out 0s;
   transition: 0.2s ease-in-out 0s;
 }
 .expertise-btn:hover {
@@ -633,11 +570,8 @@ body {
 }
 .portfolio {
   padding: 40px 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width: 100%;
-  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   overflow: hidden;
 }
@@ -673,16 +607,14 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  -webkit-transform: scale(1);
   transform: scale(1);
-  -webkit-transition: 0.2s ease-in-out 0s;
   transition: 0.2s ease-in-out 0s;
 }
 .portfolio-item div:hover {
   z-index: 10;
-  -webkit-transform: scale(1.05);
   transform: scale(1.05);
   -webkit-box-shadow: 0px 0px 39px 5px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 39px 5px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 0px 39px 5px rgba(0, 0, 0, 0.75);
 }
 .about-us {
@@ -708,26 +640,15 @@ body {
   background-color: #35c2f8;
 }
 .about-us .about-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
 }
 .about-us .about-item {
   width: 850px;
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   margin-bottom: 100px;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
 }
 @media (max-width: 970px) {
@@ -779,7 +700,6 @@ body {
 @media (max-width: 970px) {
   .about-us .about-item .item-name {
     width: 38%;
-    -webkit-transform: translate(0);
     transform: translate(0);
     opacity: 1;
   }
@@ -817,16 +737,10 @@ body {
   height: 168px;
 }
 .about-us .about-item .about-continues {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   height: 100%;
   padding: 0 35px;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   font-family: 'Monsterrat', sans-serif;
   font-size: 16px;
@@ -836,7 +750,6 @@ body {
   text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.7);
   text-transform: uppercase;
   background-color: #35c2f8;
-  -webkit-transition: 0.2s ease-in-out 0s;
   transition: 0.2s ease-in-out 0s;
 }
 .about-us .about-item .about-continues:hover {
@@ -853,15 +766,12 @@ body {
 }
 @media (max-width: 750px) {
   .about-us .about-item {
-    -ms-flex-pack: distribute;
     justify-content: space-around;
   }
   .about-us .about-item .item-name {
     position: relative;
   }
   .about-us .about-item .left {
-    -webkit-box-ordinal-group: 2;
-    -ms-flex-order: 1;
     order: 1;
   }
 }
@@ -885,26 +795,14 @@ body {
   background-color: #35c2f8;
 }
 .awesome-team .team-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
-  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
 .awesome-team .team-list .team-item {
   margin: 0 2% 6rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
 }
 @media (max-width: 750px) {
@@ -935,24 +833,15 @@ body {
   margin-bottom: 0.7rem;
 }
 .awesome-team .team-list .team-item .social-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
   justify-content: space-around;
 }
 .awesome-team .team-list .team-item .social-list .social a {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   margin: 0 5px;
   width: 40px;
   height: 40px;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   border-radius: 50%;
   background-color: #000;
@@ -986,15 +875,10 @@ body {
   text-align: center;
 }
 .main-footer .footer-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   margin-left: -15px;
   margin-right: -15px;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
   border-bottom: 1px solid #fff;
 }
@@ -1005,21 +889,13 @@ body {
   }
 }
 .main-footer .footer-wrapper .contact {
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   word-wrap: break-word;
   margin-left: 15px;
   margin-right: 15px;
   width: calc(50% - 30px);
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-box-align: start;
-  -ms-flex-align: start;
   align-items: flex-start;
 }
 @media screen and (max-width: 750px) {
@@ -1051,28 +927,18 @@ body {
   text-align: left;
 }
 .main-footer .footer-wrapper .contact .contacts-block {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 .main-footer .footer-wrapper .contact .contacts-block .contacts {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   margin-bottom: 3rem;
   padding-left: 20px;
   width: 220px;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   font-size: 16px;
   color: #fff;
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 .main-footer .footer-wrapper .contact .contacts-block .contacts .fa {
@@ -1081,20 +947,15 @@ body {
 }
 @media (max-width: 750px) {
   .main-footer .footer-wrapper .contact .contacts-block {
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
   }
 }
 @media (max-width: 970px) {
   .main-footer .footer-wrapper .contact {
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
   }
 }
 .main-footer .footer-wrapper .contact-form {
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   word-wrap: break-word;
   margin-left: 15px;
@@ -1136,26 +997,7 @@ body {
   padding: 15px 20px;
   border-radius: 3px;
   border: 1px solid #cccccc;
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
-}
-.main-footer .footer-wrapper .contact-form .form-name::-webkit-input-placeholder,
-.main-footer .footer-wrapper .contact-form .form-email::-webkit-input-placeholder,
-.main-footer .footer-wrapper .contact-form .form-ta::-webkit-input-placeholder {
-  font-size: 14px;
-  color: #bbbbbb;
-}
-.main-footer .footer-wrapper .contact-form .form-name:-ms-input-placeholder,
-.main-footer .footer-wrapper .contact-form .form-email:-ms-input-placeholder,
-.main-footer .footer-wrapper .contact-form .form-ta:-ms-input-placeholder {
-  font-size: 14px;
-  color: #bbbbbb;
-}
-.main-footer .footer-wrapper .contact-form .form-name::-ms-input-placeholder,
-.main-footer .footer-wrapper .contact-form .form-email::-ms-input-placeholder,
-.main-footer .footer-wrapper .contact-form .form-ta::-ms-input-placeholder {
-  font-size: 14px;
-  color: #bbbbbb;
 }
 .main-footer .footer-wrapper .contact-form .form-name::placeholder,
 .main-footer .footer-wrapper .contact-form .form-email::placeholder,
@@ -1181,7 +1023,6 @@ body {
   color: #fff;
   text-transform: uppercase;
   background-color: #35c2f8;
-  -webkit-transition: 0.2s ease-in-out 0s;
   transition: 0.2s ease-in-out 0s;
   text-align: left;
   cursor: pointer;
@@ -1195,3 +1036,5 @@ body {
   margin: 30px 0;
   text-align: center;
 }
+
+/*# sourceMappingURL=css/style.css.map */
